--- a/_test_templates/index.html
+++ b/_test_templates/index.html
@@ -10,12 +10,20 @@
 </head>
 <body>
     <input id="menu-toggle" type="checkbox">
+    <input id="menu-toggle-phone" type="checkbox" checked="checked">
     <label for="menu-toggle" class="toggle">
         <ion-icon name="menu-outline" class="toggle__open-btn" alt="Menu"></ion-icon>
         <ion-icon name="close-outline" class="toggle__close-btn"></ion-icon>
     </label>
     <aside class="navigation">
         <ul>
+            <li>
+
+                <label for="menu-toggle-phone" class="toggle__phone">
+                    <ion-icon name="arrow-up-circle-outline" class="toggle__phone__open-btn"></ion-icon>
+                    <ion-icon name="arrow-down-circle-outline" class="toggle__phone__close-btn"></ion-icon>
+                </label>
+            </li>
             <li class="list active">
                 <b></b>
                 <b></b>
