Change button to hover toggle

--- a/_test_templates/index.html
+++ b/_test_templates/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="navigation.css">
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input id="menu-toggle" type="checkbox">
     <input id="menu-toggle-phone" type="checkbox" checked="checked">
-    <label for="menu-toggle" class="toggle">
-        <ion-icon name="menu-outline" class="toggle__open-btn" alt="Menu"></ion-icon>
-        <ion-icon name="close-outline" class="toggle__close-btn"></ion-icon>
-    </label>
     <aside class="navigation">
         <ul>
             <li>
@@ -83,7 +78,9 @@
         </ul>
     </aside>
 
-    <main>
+    <header><h1>Программа</h1></header>
+    <main class="container">   
+        
     </main>
 
     <script src="index.js"></script>
